# considition-2023

./: .gitignore  main.py  pyproject.toml  requirements.txt  scoring.py
data/: general.json
src/: api.py  data_loading.py  main.py  scoring.py  utils.py
starter_kit/: main.py  scoring.py
